Fix: remove min-width from body to prevent overflow of code elements in blog posts

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,6 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
-  min-width: min-content;
   line-height: 1.5;
 }
 
